--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "tsup-lib",
-  "version": "0.1.0",
-  "private": true,
+  "name": "test-c1",
+  "version": "0.1.1",
+  "private": false,
+  "main": "src/dist/Component.js",
+  "files": [
+    "${npm_package_main}"
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -9,11 +13,13 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "test-c1": "^0.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "dev": "concurrently \"tsup --watch\" \"npm run start\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +40,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^7.2.0",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.6.2",
+    "tsup": "^5.12.8"
   }
 }
