--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "test-c1",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": false,
   "main": "src/dist/Component.js",
   "files": [
-    "${npm_package_main}",
-    "${npm_package_main}.map"
+    "${npm_package_main}"
   ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -14,7 +13,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "test-c1": "^0.1.1",
+    "test-c1": "^0.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
