--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,17 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["plugin:react/recommended", "airbnb", "prettier"],
+  "parser": "@typescript-eslint/parser",
+  "extends": [
+    "plugin:react/recommended",
+    "airbnb",
+    "react-app",
+    "react-app/jest",
+    "eslint-config-prettier",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
+  ],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -11,9 +21,10 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "prettier", "eslint-plugin-prettier"],
-  "ignorePatterns": ["src/dist/*", "src/reportWebVitals.js", "src/setupTests.js"],
+  "plugins": ["@typescript-eslint", "react", "prettier", "eslint-plugin-prettier"],
+  "ignorePatterns": ["src/dist/*"],
   "rules": {
-    "prettier/prettier": 1
+    "prettier/prettier": 1,
+    "react/jsx-filename-extension": [1, { "extensions": [".tsx", "jsx"] }]
   }
 }
