--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "test-c1",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "private": false,
   "main": "src/dist/Component.js",
   "files": [
-    "${npm_package_main}"
+    "src/dist"
   ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -13,7 +13,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "test-c1": "^0.1.2",
+    "test-c1": "^0.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,6 +42,11 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^27.5.1",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
     "concurrently": "^7.2.0",
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -52,6 +57,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.6.2",
-    "tsup": "^5.12.8"
+    "tsup": "^5.12.8",
+    "typescript": "^4.6.4"
   }
 }
