Trying install microbundle

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "declaration": true,
     "declarationMap": true
   },
-  "include": ["src/*"],
+  "include": ["src/*", "*.d.ts"],
   "exclude": ["node_modules", "src/dist/*"]
 }
