--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "test-c1": "^0.1.4",
+    "test-c1": "^0.1.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -56,7 +56,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "microbundle": "^0.15.0",
     "prettier": "^2.6.2",
+    "sass": "^1.51.0",
     "tsup": "^5.12.8",
     "typescript": "^4.6.4"
   }
