--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "esnext",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -14,9 +14,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
-    "declaration": true,
-    "declarationMap": true
+    "jsxFactory": "",
+    "jsxFragmentFactory": "",
+    "declaration": true
   },
-  "include": ["src/*", "*.d.ts"],
+  "include": ["src/package", "*.d.ts"],
   "exclude": ["node_modules", "src/dist/*"]
 }
