--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "test-c1": "^0.1.8",
+    "test-c1": "^0.1.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "node -e \"fs.rmSync('src/dist', { recursive: true, force: true })\" && microbundle --format es",
-    "dev": "concurrently \"microbundle watch\" \"npm run start\"",
+    "dev": "concurrently \"microbundle --format es watch\" \"npm run start\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
