--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-c1",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "private": false,
   "type": "module",
   "source": "./src/package/Component.tsx",
@@ -16,7 +16,6 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "test-c1": "^0.1.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -62,6 +61,9 @@
     "microbundle": "^0.15.0",
     "prettier": "^2.6.2",
     "sass": "^1.51.0",
+    "stylelint": "^14.8.2",
+    "stylelint-config-prettier-scss": "^0.0.1",
+    "stylelint-config-standard-scss": "^3.0.0",
     "tsup": "^5.12.8",
     "typescript": "^4.6.4"
   }
