--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,4 +1,5 @@
 {
   "extends": ["stylelint-config-standard-scss", "stylelint-config-prettier-scss"],
+  "ignoreFiles": ["**/*.js", "**/*.tsx"],
   "rules": {}
 }
