--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,5 +1,7 @@
 {
   "extends": ["stylelint-config-standard-scss", "stylelint-config-prettier-scss"],
-  "ignoreFiles": ["**/*.js", "**/*.tsx"],
-  "rules": {}
+  "ignoreFiles": ["**/*.js", "**/*.tsx", "**/*.ts"],
+  "rules": {
+    "selector-class-pattern": "^[a-z0-9_-]+$"
+  }
 }
