--- a/.stylelintrc
+++ b/.stylelintrc
@@ -2,6 +2,11 @@
   "extends": ["stylelint-config-standard-scss", "stylelint-config-prettier-scss"],
   "ignoreFiles": ["**/*.js", "**/*.tsx", "**/*.ts"],
   "rules": {
-    "selector-class-pattern": "^[a-z0-9_-]+$"
+    "selector-class-pattern": [
+      "^[a-z0-9_-]+$",
+      {
+        "severity": "warning"
+      }
+    ]
   }
 }
