Added deploy script

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "deploy": "npm run build && react-scripts build",
     "lint": "eslint -c .eslintrc src/package && stylelint --config .stylelintrc src/package",
     "build": "npm run lint && node -e \"fs.rmSync('src/dist', { recursive: true, force: true })\" && microbundle --format es",
     "dev": "concurrently \"microbundle --format es watch\" \"npm run start\"",
