--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kolserdav/react-lib",
+  "name": "@kolserdav/test-lib",
   "version": "1.0.2",
   "private": false,
   "license": "MIT",
